--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>The HTML5 Herald</title>
+		<title>The Chatroom</title>
 		<meta name="description" content="Twitter Analyzer">
 		<meta name="author" content="Tobin Leung">
 
@@ -10,22 +10,21 @@
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 		<script src="/static/chat.js" type="text/javascript"></script>
+		<link rel="stylesheet" href="/static/style.css">
 	</head>
-	<style> 
-		#new_messages{
-			height: 500px;
-			overflow-y: scroll;
-		}
-		.username{
-			color: blue;
-		}
-	</style>
-	<body>
-		<div id="new_messages"> </div>
-		Message:<br>
-			<input autofocus id="input_message" type="text" name="message">
-			<br>
-			<button id="submit" > Submit </button>
 
+	<body>
+		<center><div id="title"> Welcome To TobChat</div></center>
+		<div id="container">
+			<div class="window">
+				<div id="new_messages"> </div> 
+					<div id="message_entry">
+						Message:<br>
+						<input autofocus id="input_message" type="text" name="message">
+						<br>
+						<button id="submit" > Submit </button>
+					</div>
+			</div>
+		</div>	
 	</body>
 </html>
